# advent.of.code

./: README.md
2023/: aoc.py  day01.py
2024/: .clang-format  .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  day01.cpp  day01.h  day02.cpp  day02.h  day02.py  day03.cpp  day03.h  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  main.cpp  test.h
2024/util/: bits.cpp  bits.h  config.cpp  config.h  coord.h  point.h  ray.h  string.cpp  string.h  term.cpp  term.h  timer.cpp  timer.h
2025/: day1.py  day2.py  day3.py  day4.py  day5.py  util.py
